# mp2-2025-lab5-tables

./: CMakeLists.txt
include/: hash_table.h  ordered_table.h  polynomial.h  table.h  tree.h
samples/: CMakeLists.txt  sample.cpp
src/: polynomial.cpp  tree.cpp
test/: CMakeLists.txt  test_hash_table.cpp  test_monomial.cpp  test_ordered_table.cpp  test_polynomial.cpp  test_table.cpp  test_tree.cpp
